# eManager

./: CMakeLists.txt  employeemanager.cpp  main.cpp
code/: employee.cpp  employee.h  employeemanager.h  qmlFile.qrc
qml/: AddPage.qml  Main.qml
